1.0
===

- Applied minor patch by Ken Egozi fixing MR-328
  "In PrototypeWebValidation, SameAsValidator and NotSameAsValidator 
   are forcing a locase id for text fields"

- Applied minor patch by Nick Hemsley fixing MR-325
  "DictHelper.FromNameValueCollection: persist arrays correctly"

- Added LocalExceptionFilterHandler

- Applied Robert Ream's patch which allows [DefaultAction] to be applied to Actions. This means that no strings are required. 

- BaseControllerTest supports the ContextInitializer delegate, which makes it easier to modify the MockRailsEngineContext

Release Candidate 3
===================

- Added IDisposable/Dispose back to the controller

- Applied Lee Henson's patch adding generic overloads to ReflectionHelper

- Added a few more RenderView overloads that take a mimeType to configure the Response.ContentType

- If the controller cannot be found, MR searches for a special rescue "rescues/404" before throwing throwing an exception.

- If an action could not be found, we go through normal path an use a general rescue if it can be found for the controller. 

- UrlHelper change: Now if the param encode wasn't set, UrlHelper assumes it's true.

- Applied patch by Oleg Snurnikov fixing MR-319
  "MockResponse - basic implementation of Redirect, Write, BinaryWrite and Clear overloads"

- Applied patch by Chirs Ortman fixing MR-296
  "Dont get validation summary when binding with AR attribute but controller inherits smart dispatcher controller"

- Applied patch by Rafael Teixeira fixing MR-298
  "ColumnRenderer with an empty enumeration still renders table start and end sections"

- Fixed MR-300
  "DataBindAttribute in a ARSmartDispatcherController inherit the behavior from ARDataBinder"

- Applied minor patch by James Su fixing MR-303
  "Behavior is not consistent between FormToAttributed and LinkToAttributed in HtmlHelper"

- Applied goodwill's patch adding cookie support to BaseControllerTest MR-304

- Applied goodwill's patch fixing MR-305